Adding standalone LaTeX module

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
 <form action="/render" method="post">
-Source Code: <textarea name="source"></textarea></br>
-Language: <select name="lang"><option value="Java">Java</option><option value="Python">Python</option></select></br/>
-<button type="submit">Render</button>
+  <textarea style="text-align:top;font-family:monospace" name="source" rows="30" cols="80">System.err.println("Hello, World");</textarea>
+  </br>
+  
+  <select name="lang">
+      <option value="Java">Java</option>
+      <option value="Python">Python</option>
+  </select>
+  </br/>
+
+  <button type="submit">Render</button>
 </form>
