--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<a href="https://github.com/mumrah"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 <form action="/render" method="post">
   <textarea style="text-align:top;font-family:monospace" name="source" rows="30" cols="80">{{ source }}</textarea>
   </br>
