--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,19 @@
+<html>
+<head>
+<title>Generate images from your source code listings</title>
+<meta name="keywords" content="source code image generator, LaTeX, source code, source listing, pdf, png"/>
+<meta name="description" content="An online source code image generator tool. Uses LaTeX to generate high quality typeset raster images"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+<meta http-equiv="content-language" content="EN"/>
+<meta name="robots" content="index, nofollow"/>
+</head>
+<body>
+<!-- GitHub banner -->
 <a href="https://github.com/mumrah/source2image"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+
+<h1>Source Code Image Generator</h1>
+<p>Uses LaTeX "listings" package to generate high quality typeset raster images of your source code</p>
+<!-- Actual content -->
 <form action="/render" method="post">
   <textarea style="text-align:top;font-family:monospace" name="source" rows="30" cols="80">{{ source }}</textarea>
   </br>
@@ -12,3 +27,33 @@
 
   <button type="submit">Render</button>
 </form>
+
+<!-- Google AdSense -->
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-3525795981797508";
+/* source2image */
+google_ad_slot = "1169049790";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+<!-- Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37682503-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+</body>
+</html>
