Adding pdf option

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,14 @@
   </select>
   </br/>
 
+  Display Mode:
   <input type="radio" name="mode" value="display" checked="true">display</input>
   <input type="radio" name="mode" value="download">download</input>
+  </br>
+
+  Format:
+  <input type="radio" name="format" value="png" checked="true">png</input>
+  <input type="radio" name="format" value="pdf">pdf</input>
   </br>
 
   <button type="submit">Render</button>
