--- a/templates/index.html
+++ b/templates/index.html
@@ -2,42 +2,64 @@
 <head>
 <title>Generate images from your source code listings</title>
 <meta name="keywords" content="source code image generator, LaTeX, source code, source listing, pdf, png"/>
-<meta name="description" content="An online source code image generator tool. Uses LaTeX to generate high quality typeset raster images"/>
+<meta name="description" content="An online source code image generator tool. Uses LaTeX to generate high quality typeset images"/>
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta http-equiv="content-language" content="EN"/>
 <meta name="robots" content="index, nofollow"/>
+<!-- Flattr -->
+<script type="text/javascript">
+/* <![CDATA[ */
+    (function() {
+        var s = document.createElement('script'), t = document.getElementsByTagName('script')[0];
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'http://api.flattr.com/js/0.6/load.js?mode=auto';
+        t.parentNode.insertBefore(s, t);
+    })();
+/* ]]> */</script>
 </head>
 <body>
 <!-- GitHub banner -->
 <a href="https://github.com/mumrah/source2image"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 <h1>Source Code Image Generator</h1>
-<p>Uses LaTeX "listings" package to generate high quality typeset raster images of your source code</p>
+<p>Uses LaTeX "listings" package to generate high quality typeset images of your source code</p>
 <!-- Actual content -->
 <form action="/render" method="post">
+  <div style="float:left">  
   <textarea style="text-align:top;font-family:monospace" name="source" rows="24" cols="80">{{ source }}</textarea>
-  </br>
-  
-  <select name="lang">
+  </div>
+  <div style="float:left; margin-left:1em;">  
+  <em>Language:</em></br>
+  <select name="lang" id="lang">
       {% for lang in languages %}
       <option value="{{ lang }}">{{ lang }}</option>
       {% endfor %}
   </select>
-  </br/>
+  </br>
+  </br>
 
-  Display Mode:
+  <em>Display Mode:</em></br>
   <input type="radio" name="mode" value="display" checked="true">display</input>
   <input type="radio" name="mode" value="download">download</input>
   </br>
+  </br>
 
-  Format:
+  <em>Format:</em></br>
   {% for fmt in formats %}
   <input type="radio" name="format" value="{{ fmt }}" {% if loop.index == 1 %}checked="true"{% endif %}>{{ fmt }}</input>
   {% endfor %}
   </br>
 
-  <button type="submit">Render</button>
+  <button type="submit" style="font-size:0.8em; padding: 1em 3em">Render</button>
+  </div>
 </form>
+<div style="clear:both; padding:1em;"/>
+</hr>
+<!-- Flattr -->
+<a class="FlattrButton" style="display:none;" href="http://source2image.info/"></a>
+<noscript><a href="http://flattr.com/thing/1102116/Generate-pretty-pictures-of-your-source-code" target="_blank">
+<img src="http://api.flattr.com/button/flattr-badge-large.png" alt="Flattr this" title="Flattr this" border="0" /></a></noscript>
 
 <!-- Google AdSense -->
 <script type="text/javascript"><!--
