--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta http-equiv="content-language" content="EN"/>
 <meta name="robots" content="index, nofollow"/>
+<link rel="icon" type="image/png" href="static/favicon-64.png"/>
 {% autoescape false %}
 {{ extra_head }}
 {% endautoescape %}
