Support non-ASCII characters (Latin-1)

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
 <form action="/render" method="post">
   <div style="float:left">  
   <textarea style="text-align:top;font-family:monospace" name="source" rows="24" cols="80">{{ source }}</textarea>
+  </br>
+  <span style="font-size:80%">Due to limitations in the listings package, only Latin-1 characters are recognized</span>
   </div>
   <div style="float:left; margin-left:1em;">  
   <em>Language:</em></br>
