--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,15 @@
 <meta http-equiv="content-language" content="EN"/>
 <meta name="robots" content="index, nofollow"/>
 <link rel="icon" type="image/png" href="static/favicon-64.png"/>
+<script type="text/javascript">
+var clearedOnce = false;
+function clearContents(elem) {
+  if(clearedOnce == false) {
+    elem.value="";
+    clearedOnce = true;
+  }
+}
+</script>
 {% autoescape false %}
 {{ extra_head }}
 {% endautoescape %}
@@ -20,9 +29,9 @@
 <!-- Actual content -->
 <form action="/render" method="post">
   <div style="float:left">  
-  <textarea style="text-align:top;font-family:monospace" name="source" rows="24" cols="80">{{ source }}</textarea>
-  </br>
   <span style="font-size:80%">Due to limitations in the listings package, only Latin-1 characters are recognized</span>
+  </br>
+  <textarea onfocus="clearContents(this)" style="text-align:top;font-family:monospace" name="source" rows="24" cols="80">{{ source }}</textarea>
   </div>
   <div style="float:left; margin-left:1em;">  
   <em>Language:</em></br>
