--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,29 @@ function clearContents(elem) {
     clearedOnce = true;
   }
 }
+function toggle(opt) {
+    var target = document.getElementById("rasterOptions");
+    if(opt.value == "pdf"){
+        target.style.display="none";
+    } else {
+        target.style.display="block";
+    }
+}
 </script>
+<style>
+#rasterOptions #background {
+    vertical-align: bottom;
+}
+fieldset div {
+    padding: 0.2em 0;
+}
+fieldset {
+    margin: 1em 0;
+}
+label {
+    font-style:italic;
+}
+</style>
 {% autoescape false %}
 {{ extra_head }}
 {% endautoescape %}
@@ -31,40 +53,54 @@ function clearContents(elem) {
   <div style="float:left">  
   <span style="font-size:80%">Due to limitations in the listings package, only Latin-1 characters are recognized</span>
   </br>
-  <textarea onfocus="clearContents(this)" style="text-align:top;font-family:monospace" name="source" rows="24" cols="80">{{ source }}</textarea>
+  <textarea onfocus="clearContents(this)" style="text-align:top;font-family:monospace" name="source" rows="30" cols="80">{{ source }}</textarea>
   </div>
   <div style="float:left; margin-left:1em;">  
-  <em>Language:</em></br>
-  <select name="lang" id="lang">
-      {% for lang in languages %}
-      <option value="{{ lang }}">{{ lang }}</option>
+    <fieldset>
+    <legend>Global options</legend>
+    <div>
+      <label for="lang">Language:</label>
+      <select name="lang" id="lang">
+        {% for lang in languages %}
+        <option value="{{ lang }}">{{ lang }}</option>
+        {% endfor %}
+      </select>
+    </div>
+    <div>
+      <label>Display Mode:</label>
+      </br>
+      <input type="radio" name="mode" value="display" checked="true">display</input>
+      <input type="radio" name="mode" value="download">download</input>
+    </div>
+    <div>
+      <label for="format">Format:</label>
+      </br>
+      {% for fmt in formats %}
+      <input type="radio" name="format" onclick="toggle(this)" value="{{ fmt }}" {% if loop.index == 1 %}checked="true"{% endif %}>{{ fmt }}</input>
       {% endfor %}
-  </select>
-  </br>
-  </br>
-
-  <em>Display Mode:</em></br>
-  <input type="radio" name="mode" value="display" checked="true">display</input>
-  <input type="radio" name="mode" value="download">download</input>
-  </br>
-  </br>
-
-  <em>Format:</em></br>
-  {% for fmt in formats %}
-  <input type="radio" name="format" value="{{ fmt }}" {% if loop.index == 1 %}checked="true"{% endif %}>{{ fmt }}</input>
-  {% endfor %}
-  </br>
-  </br>
-
-  <em>Background:</em>
-  <input onclick="document.getElementById('alpha').checked=false;" style="vertical-align:text-bottom" type="color" value="#FFFFFF" name="background"/>
-  </br>
-  </br>
-
-  <em>Transparency:</em>
-  <input type="checkbox" checked="true" name="alpha" id="alpha"/>
-  </br>
-  </br>
+    </div>
+  </fieldset>
+  <div id="rasterOptions">
+    <fieldset>
+      <legend>Raster options</legend>
+      <div>
+      <label for="width">Width:</label>
+      <input name="width" type="number" min="1" max="2048" value="800"/>
+      </div>
+      <div>
+      <label for="height">Height:</label>
+      <input id="height" name="height" type="number" min="1" max="2048" value="600"/>
+      </div>
+      <div>
+      <label for="background">Background:</label>
+      <input onclick="document.getElementById('alpha').checked=false;" type="color" value="#FFFFFF" name="background" id="background"/>
+      </div>
+      <div>
+      <label for="alpha">Transparency:</label>
+      <input type="checkbox" checked="true" name="alpha" id="alpha"/>
+      </div>
+    </fieldset>
+  </div>
 
   <button type="submit" style="font-size:0.8em; padding: 1em 3em">Render</button>
   </div>
