--- a/templates/index.html
+++ b/templates/index.html
@@ -85,11 +85,11 @@ label {
       <legend>Raster options</legend>
       <div>
       <label for="width">Width:</label>
-      <input name="width" type="number" min="1" max="2048" value="800"/>
+      <input id="width" name="width" type="number" min="1" max="2048" step="100" value="800"/>
       </div>
       <div>
       <label for="height">Height:</label>
-      <input id="height" name="height" type="number" min="1" max="2048" value="600"/>
+      <input id="height" name="height" type="number" min="1" max="2048" step="100" value="600"/>
       </div>
       <div>
       <label for="background">Background:</label>
